[tool.poetry]
name = "stromming-snake"
version = "0.1.0"
description = "Stream overlay backend"
authors = ["dny"]
readme = "README.md"
packages = [{include = "stromming_snake"}]

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg-python = "^0.2.0"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
